implement almost everything (#1)
