# backend/src/api/mod.rs
@@ -34,6 +34,7 @@ fn public_router() -> Router<Arc<WIState>> {
         .route("/data/environments", get(data::environments))
         .route("/data/equipment", get(data::equipment))
         .route("/data/skills", get(data::skills))
+        .route("/data/mods", get(data::mods))
 }
 
 fn private_router() -> Router<Arc<WIState>> {
